syntax = "proto3";

package msproto;
option go_package = "example/movieSuggestion";


message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {};
}